# product_shop

./: .envsample  .gitignore  README.md  pyproject.toml  requirements.txt
basket/: models.py  serializers.py  urls.py  views.py
basket/migrations/: 0001_initial.py  0002_rename_cart_basketitem_basket_and_more.py  0003_alter_basketitem_unique_together_alter_basket_user_and_more.py
config/: settings.py  urls.py
products/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
